[workspace]
members=[]
resolver="3"

[workspace.package]
license = "MPL-2.0"
version = "0.1.0"
description = "Assembly tricks: both construction and detection"

[workspace.dependencies]

portal-pc-asm-common = { version = "0.1.1", git = "https://github.com/portal-co/asm-common.git" }

rv-asm = { version = "*", git = "https://github.com/portal-co/rv-utils.git" }

portal-solutions-asm-x86-64 = {version = "0.1.0", git = "https://github.com/portal-co/asm-arch.git"}
portal-solutions-asm-aarch64 = {version = "0.1.0", git = "https://github.com/portal-co/asm-arch.git"}
portal-solutions-asm-riscv64 = {version = "0.1.0", git = "https://github.com/portal-co/asm-arch.git"}

